Fixed inline code wrapping in markdown. Closes #44

--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -138,6 +138,7 @@
 		background-clip: padding-box;
 		font-family: var(--font-family-monospace);
 		font-size: 85%;
+		word-wrap: break-word;
 	}
 
 	pre {
